--- a/pom.xml
+++ b/pom.xml
@@ -1,24 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.1.6.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.learning.spring</groupId>
 	<artifactId>my-pet-clinic</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>my-pet-clinic</name>
 	<packaging>pom</packaging>
-	
+
+
 	<description>Demo project for Spring Boot</description>
-	
+
+	<modules>
+		<module>pet-clinic-data</module>
+		<module>pet-clinic-web</module>
+	</modules>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
+
 
 	<build>
 		<plugins>
@@ -26,11 +31,21 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<configuration>
+					<!-- By default, it also deploys, so overrode it with install goal -->
+					<goals>install</goals>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
-	<modules>
-		<module>pet-clinic-data</module>
-		<module>pet-clinic-web</module>
-	</modules>
+	<scm>
+		<developerConnection>scm:git:git@github.com:KamranMohd/my-pet-clinic.git</developerConnection>
+	  <tag>my-pet-clinic-0.0.1</tag>
+  </scm>
+
+
 </project>
