--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>com.learning.spring</groupId>
 	<artifactId>my-pet-clinic</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<name>my-pet-clinic</name>
 	<packaging>pom</packaging>
 
@@ -44,7 +44,7 @@
 
 	<scm>
 		<developerConnection>scm:git:git@github.com:KamranMohd/my-pet-clinic.git</developerConnection>
-	  <tag>my-pet-clinic-0.0.1</tag>
+	  <tag>HEAD</tag>
   </scm>
 
 
