setting autoversionSubmodules to true

--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,9 @@
 				<configuration>
 					<!-- By default, it also deploys, so overrode it with install goal -->
 					<goals>install</goals>
+					<autoVersionSubmodules>true</autoVersionSubmodules>
 				</configuration>
+				
 			</plugin>
 		</plugins>
 	</build>
